# blockchain

./: README.md
core/: Cargo.toml
core/src/: account.rs  bcdb.rs  block.rs  blockchain.rs  mine.rs  miner.rs  pow.rs  transaction.rs
main/: Cargo.toml
main/src/: main.rs
utils/: Cargo.toml
utils/src/: bkey.rs  serializer.rs
