[package]
name = "core"
version = "0.1.0"
authors = ["MR. Huang <huangbqsky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils   = { path = "../utils" }
bigint  = { version = "4.4.3" }
leveldb = { version = "0.8.6" }
chrono  = { version = "0.4.19" }
serde   = { version = "1.0.123", features = ["derive"] }
